tests/type-errors/expr_cmp_ne_set.arl
archetype expr_cmp_ne_set

entry exec () {
  var a : set<nat> = [1; 2; 3];
  var b : set<nat> = [1; 2; 3];
  do_require (a <> b, "ko");
}
